--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="site-branding">
 
                 <div class="logo">
-                    <a href="/">
+                    <a href="./">
                         <img alt="Site Logo" class="dark-logo" src="https://weareenigma.com/assets/resources/img/enigma-en-logo.svg">
                         <!-- <img alt="Site Logo Light" class="light-logo" src="https://weareenigma.com/assets/resources/img/enigma-en-logo.svg"> -->
                     </a>
@@ -613,7 +613,7 @@
                                         <div data-loop="true" data-wf-ignore="true"
                                             class="o-media_obj w-background-video w-background-video-atom left-b">
                                            
-                                            <video src="https://weareenigma.com/assets/resources/left.mp4" autoPlay muted playsinline loop
+                                            <video class="vid" src="https://weareenigma.com/assets/resources/left.mp4" autoPlay muted playsinline loop
                                                 id="beach-waves"></video>
                                         </div>
                                     </div>
@@ -630,7 +630,7 @@
                                     </div>
                                     <div class="o-media o-media2 hm-us">
                                         <div class="o-media_obj w-background-video w-background-video-atom right-b">
-                                            <video src="https://weareenigma.com/assets/resources/right.mp4" autoPlay muted playsinline loop
+                                            <video class="vid" src="https://weareenigma.com/assets/resources/right.mp4" autoPlay muted playsinline loop
                                                 id="beach-waves"></video>
                                         </div>
                                     </div>
@@ -1051,7 +1051,7 @@
                                     <!--Project-->
                                     <div class="ar-work">
 
-                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
+                                        <!--Project URL--><a href="quickx" data-tilt data-tilt-glare="true"
                                             data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
                                             data-cursor="-color-q">
 
@@ -1155,7 +1155,7 @@
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
-                                                <a href="#">
+                                                <a href="quickx">
                                                     <img src="https://weareenigma.com/assets/resources/img/QuickX-mobile-Work.webp" class="lazyload">
                                                     <h2><span>04</span>Quickx</h2>
                                                 </a>
@@ -1165,7 +1165,7 @@
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
-                                                <a href="dmtca">
+                                                <a href="">
                                                     <img src="https://weareenigma.com/assets/resources/img/DMTCA-mobile-work.webp" class="lazyload">
                                                     <h2><span>05</span>Dmtca</h2>
                                                 </a>
