--- a/test.html
+++ b/test.html
@@ -66,8 +66,8 @@
             <div class="site-branding">
 
                 <div class="site-logo">
-                    <a href="index.html">
-                        <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
+                    <a href="./">
+                        <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg" >
                         <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
                     </a>
                 </div>
