--- a/certvault.html
+++ b/certvault.html
@@ -50,12 +50,12 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
 
-    </div>
+    </div> -->
     <div class="site-header">
         <div class="header-wrapper">
 
@@ -165,7 +165,7 @@
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper active" data-bgcolor="#fff">
-                <div id="start" class="patra" data-humcolor="#fff" style="background: #F50D37;">
+                <div id="start" class="patra certvault" data-humcolor="#fff" style="background: #F50D37;">
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
                     <div class="el3 el-bg"></div>
@@ -246,7 +246,7 @@
                         </div>
                         <figure data-scroll data-scroll-speed="2">
                             <video loop="true" autoplay="autoplay" preload="true">
-                                <source src="/Certvault.mp4" />
+                                <source src="/certvault.mp4" />
                             </video>
                         </figure>
                     </div>
@@ -445,7 +445,7 @@
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
                         <a href="#" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-kedar.png">
+                            <img class="swipeimage" src="/assets/resources/img/work-kedar.webp">
                             <span class="s" data-chaffle="en">Kedarkala
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
