--- a/certvault.html
+++ b/certvault.html
@@ -50,12 +50,12 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
 
-    </div>
+    </div> -->
     <div class="site-header">
         <div class="header-wrapper">
 
@@ -182,7 +182,7 @@
                     </picture>
                 </div>
 
-                <div id="cer" class="cer" data-humcolor="#000">
+                <div id="cer" class="cer mg__bottom" data-humcolor="#000">
                     <div data-scroll>
                         <div class="text_anim hdn">
                             <h2 data-scroll-target="#cer">
@@ -244,7 +244,7 @@
                                     Vault</span>
                             </h2>
                         </div>
-                        <figure data-scroll data-scroll-speed="2">
+                        <figure>
                             <video loop="true" autoplay="autoplay" preload="true">
                                 <source src="/certvault.mp4" />
                             </video>
@@ -444,9 +444,9 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="#" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-kedar.webp">
-                            <span class="s" data-chaffle="en">Kedarkala
+                        <a href="https://www.weareenigma.com/certvault" class="title--title2 next">
+                            <img class="swipeimage" src="/assets/resources/img/dharan-work.webp">
+                            <span class="s" data-chaffle="en">Dharan
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink">
