--- a/patronum.html
+++ b/patronum.html
@@ -528,8 +528,8 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="#" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-kedar.png">
+                        <a href="https://www.weareenigma.com/kedarkala" class="title--title2 next">
+                            <img class="swipeimage" src="/assets/resources/img/work-kedar.webp">
                             <span class="s" data-chaffle="en">Kedarkala
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
