--- a/dharan.html
+++ b/dharan.html
@@ -429,9 +429,9 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="#" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-kedar.png">
-                            <span class="s" data-chaffle="en">Kedarkala
+                        <a href="https://www.weareenigma.com/pdtl" class="title--title2 next">
+                            <img class="swipeimage" src="/assets/resources/img/pdtl-work.webp">
+                            <span class="s" data-chaffle="en">PDTL
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink">
