--- a/kedarkala.html
+++ b/kedarkala.html
@@ -387,9 +387,9 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="#" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-kedar.png">
-                            <span class="s" data-chaffle="en">Kedarkala
+                        <a href="https://www.weareenigma.com/quickx" class="title--title2 next">
+                            <img class="swipeimage" src="/assets/resources/img/QuickX-Work.webp">
+                            <span class="s" data-chaffle="en">QuickX
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink">
