--- a/certvault.html
+++ b/certvault.html
@@ -437,7 +437,7 @@
                 <div id="poster" class="blocco">
                     <div class="left_block grid_intern mb__bottom" data-scroll>
                         <figure>
-                            <img alt="" src="/assets/resources/img/Certvault-Portfolio/pop-up.png">
+                            <img alt="" class="scale__img" src="/assets/resources/img/Certvault-Portfolio/pop-up.png">
                         </figure>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="https://www.weareenigma.com/certvault" class="title--title2 next">
+                        <a href="/dharan.html" class="title--title2 next">
                             <img class="swipeimage" src="/assets/resources/img/dharan-work.webp">
                             <span class="s" data-chaffle="en">Dharan
                             </span>
