--- a/quickx.html
+++ b/quickx.html
@@ -488,7 +488,7 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="https://www.weareenigma.com/certvault" class="title--title2 next">
+                        <a href="/certvault.html" class="title--title2 next">
                             <img class="swipeimage" src="/assets/resources/img/work-certvault.webp">
                             <span class="s" data-chaffle="en">Certvault
                             </span>
