--- a/kedarkala.html
+++ b/kedarkala.html
@@ -387,7 +387,7 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="https://www.weareenigma.com/quickx" class="title--title2 next">
+                        <a href="/quickx.html" class="title--title2 next">
                             <img class="swipeimage" src="/assets/resources/img/QuickX-Work.webp">
                             <span class="s" data-chaffle="en">QuickX
                             </span>
