--- a/patronum.html
+++ b/patronum.html
@@ -528,7 +528,7 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="https://www.weareenigma.com/kedarkala" class="title--title2 next">
+                        <a href="/kedarkala.html" class="title--title2 next">
                             <img class="swipeimage" src="/assets/resources/img/work-kedar.webp">
                             <span class="s" data-chaffle="en">Kedarkala
                             </span>
