--- a/dharan.html
+++ b/dharan.html
@@ -429,7 +429,7 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="https://www.weareenigma.com/pdtl" class="title--title2 next">
+                        <a href="/PDTL.html" class="title--title2 next">
                             <img class="swipeimage" src="/assets/resources/img/pdtl-work.webp">
                             <span class="s" data-chaffle="en">PDTL
                             </span>
