--- a/gcm.html
+++ b/gcm.html
@@ -166,9 +166,9 @@
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper active" data-bgcolor="#fff">
-                <div id="start" class="patra gcm" data-humcolor="#fff" style="background: #EF8F33;">
+                <div id="start" class="patra gcm" data-humcolor="#fff" style="background: #000;">
                     <div class="el1 el-bg"></div>
-                    <div class="el2 el-bg"></div>
+                    <div class="el2 el-bg gcm__position"></div>
                     <div class="el3 el-bg"></div>
                     <div class="el4 el-bg"></div>
                     <div class="el5 el-bg"></div>
@@ -252,8 +252,7 @@
                         </figure>
                     </div>
                 </div> -->
-                <div class="module padding_on_top_velocities m-p m__p" style="background: #EF8F33;"
-                    data-humcolor="#fff">
+                <div class="module padding_on_top_velocities m-p m__p" style="background: #000;" data-humcolor="#fff">
                     <div class="container-fluid">
                         <div class="row no-gutters justify-content-center">
                             <div class="col-1" data-scroll data-scroll-direction="vertical" data-scroll-speed="2">
@@ -339,13 +338,55 @@
                 </div> -->
 
 
-                <div class="gcm__boxes" data-scroll>
-                    <div class="box" style="background-color: #E73354;">#E73354</div>
+                <!-- <div class="gcm__boxes" data-scroll data-humcolor="#fff" data-scroll-speed="2">
+                    <div class="box reveal" style="background-color: #E73354;">#E73354</div>
                     <div class="box" style="background-color: #759194;">#759194</div>
                     <div class="box" style="background-color: #F0A238;">#F0A238</div>
                     <div class="box" style="background-color: #039DBC;">#039DBC</div>
                     <div class="box" style="background-color: #0E0E0E; color: #fff;">#0E0E0E</div>
-                    <div class="box" style="background-color: #FFFFFF; border: 2px solid #000; color: #000;">#FFFFFF
+                    <div class="box" style="background-color: #FFFFFF; color: #000;">#FFFFFF
+                    </div>
+                </div> -->
+
+                <div id="colori" class="grid_intern gcm__height">
+                    <div class="grid__col">
+                        <ul data-scroll style="grid-template-columns: 20% 20% 20% 20% 20%">
+                            <li>
+                                <div class="Chiaro">
+                                    <div style="background:#E73354;">
+                                        <p>#E73354</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="Chiaro">
+                                    <div style="background:#759194;">
+                                        <p>#759194</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="Chiaro">
+                                    <div style="background:#F0A238;">
+                                        <p>#F0A238</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="Chiaro">
+                                    <div style="background:#0E0E0E;">
+                                        <p>#0E0E0E</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="Chiaro">
+                                    <div class="pd_top" style="background:#013C9F;">
+                                        <p>#013C9F</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
@@ -413,7 +454,7 @@
                         </figure>
                     </div>
                 </div> -->
-                <div class="image-section" data-scroll style="background-color:#EF8F33;" data-humcolor="#fff">
+                <div class="image-section" data-scroll style="background-color:#000;" data-humcolor="#fff">
                     <div class="reveal img-right">
                         <img src="/assets/resources/img/gcm/service.png">
                     </div>
