--- a/gcm.html
+++ b/gcm.html
@@ -50,12 +50,12 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
 
-    </div>
+    </div> -->
 
     <div class="site-header">
         <div class="header-wrapper">
@@ -411,11 +411,20 @@
                         </div>
                     </div>
                 </div>
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img class="font__pad" alt="" src="/assets/resources/img/gcm/font.png">
-                        </figure>
+                <div class="container__gcm">
+                    <div id="poster" class="blocco gcm__img__box">
+                        <div class="left_block grid_intern" data-scroll>
+                            <figure>
+                                <img class="font__pad" alt="" src="/assets/resources/img/gcm/font1.jpg">
+                            </figure>
+                        </div>
+                    </div>
+                    <div id="poster" class="blocco gcm__img__box">
+                        <div class="left_block grid_intern" data-scroll>
+                            <figure>
+                                <img class="font__pad" alt="" src="/assets/resources/img/gcm/font2.jpg">
+                            </figure>
+                        </div>
                     </div>
                 </div>
 
