--- a/wragby.html
+++ b/wragby.html
@@ -50,12 +50,13 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
+    </div> -->
 
-    </div>
+
     <div class="site-header">
         <div class="header-wrapper">
 
@@ -236,9 +237,9 @@
                     </div>
                 </div>
 
-                <div id="poster" class="blocco">
+                <div id="poster" class="blocco mockup__pt">
                     <div class="left_block margin__bottom grid_intern" data-scroll>
-                        <figure>
+                        <figure class="wrag__mockup">
                             <img alt="" src="/assets/resources/img/wragby/mockup1.png">
                         </figure>
                     </div>
@@ -258,47 +259,56 @@
                     </div>
                 </div> -->
 
-                <div id="portf" class="grid_intern port__f">
-                    <div class="margin-r-46" data-scroll>
-                        <div class="text_anim">
-                            <h2 data-scroll-target="#portf">
-                                <span>Colour </span>
-                            </h2>
-                        </div>
-                        <div class="text_anim spline_p">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be
-                                    time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks
-                                    to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
+
+                <div class="wrag__cont">
+
+                    <div id="portf" class="grid_intern port__f">
+                        <div class="margin-r-46" data-scroll>
+                            <div class="text_anim">
+                                <h2 data-scroll-target="#portf">
+                                    <span>Colour </span>
+                                </h2>
+                            </div>
+                            <div class="text_anim spline_p">
+                                <p>
+                                    <span>
+                                        Provisioning and deprovisioning users within Google Workspace can be
+                                        time-consuming
+                                        and
+                                        costly. Let Patronum fully automate all the administrator and user tasks
+                                        to ensure
+                                        an
+                                        effective and secure process.
+                                    </span>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
 
-                <div id="colorc" class="wrag__color">
-                    <div class="color-div flex">
-                        <div class="color__section">
-                            <div data-scroll-target="#colorc" data-scroll data-scroll-speed="2">
-                                <img class="gcm__color" src="/assets/resources/img/wragby/color.png" alt="">
+                    <div id="colorc" class="wrag__color">
+                        <div class="color-div flex">
+                            <div class="color__section wrag__color__section">
+                                <div data-scroll-target="#colorc" data-scroll data-scroll-speed="2">
+                                    <img class="gcm__color" src="/assets/resources/img/wragby/color.png" alt="">
+                                </div>
+
+                            </div>
+                            <div class="right-d wrag__phn">
+                                <img data-scroll-target="#colorc" data-scroll data-scroll-speed="2" class="phone__img"
+                                    src="/assets/resources/img/wragby/phone.png" alt="">
                             </div>
 
                         </div>
-                        <div class="right-d wrag__phn">
-                            <img data-scroll-target="#colorc" data-scroll data-scroll-speed="2" class="phone__img"
-                                src="/assets/resources/img/wragby/phone.png" alt="">
-                        </div>
+
 
                     </div>
-
-
                 </div>
+
+
+
+
+
                 <div id="portf" class="grid_intern wrag__pt">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
@@ -327,6 +337,14 @@
                     </div>
                 </div>
 
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" class="wragby__typo-2" src="/assets/resources/img/wragby/typo1.png">
+                        </figure>
+                    </div>
+                </div>
+
 
 
                 <div class="module wrag__module padding_on_top_velocities m-p wragby__mp" style="background: #F1F1F1;"
@@ -340,7 +358,7 @@
                                 </picture>
                             </div>
 
-                            <div class="col-2" data-scroll data-scroll-direction="vertical" data-scroll-speed="2">
+                            <div class="col-2" data-scroll data-scroll-direction="vertical" data-scroll-speed="4">
                                 <picture class="img-fluid">
                                     <img class=" lazyloaded" src="/assets/resources/img/wragby/phone2.png">
                                 </picture>
@@ -358,15 +376,15 @@
                     </div>
                 </div>
 
-                <div class="image-section" data-scroll data-humcolor="#000" style="background-color: #2C5ED1;">
+                <div class="image-section" data-scroll data-humcolor="#000" style="background-color: #E30B25;">
                     <div class="reveal img-right">
-                        <img src="/assets/resources/img/wragby/img1.png">
+                        <img class="wrag__image" src="/assets/resources/img/wragby/img1.png">
                     </div>
                     <div class="reveal img-left">
-                        <img src="/assets/resources/img/wragby/img2.png">
+                        <img class="wrag__image" src="/assets/resources/img/wragby/img2.png">
                     </div>
                     <div class="reveal img-right">
-                        <img src="/assets/resources/img/wragby/img3.png">
+                        <img class="wrag__image" src="/assets/resources/img/wragby/img3.png">
                     </div>
                     <div class="reveal img-left">
                         <img src="/assets/resources/img/wragby/img4.png">
