--- a/wragby.html
+++ b/wragby.html
@@ -347,7 +347,7 @@
 
 
 
-                <div class="module wrag__module padding_on_top_velocities m-p wragby__mp" style="background: #F1F1F1;"
+                <div class="module wrag__module padding_on_top_velocities m-p wragby__mp" style="background: #2C5ED1;"
                     data-humcolor="#fff">
                     <div class="container-fluid">
                         <div class="row no-gutters justify-content-center">
@@ -366,11 +366,12 @@
                         </div>
                     </div>
                 </div>
-                <div style="background: #11192C;">
+                <div style="background: url(/assets/resources/img/wragby/bg.png) no-repeat; background-size: cover;"
+                    class="wrag__bg">
                     <div id="poster" class="blocco">
                         <div class="left_block margin__bottom grid_intern p-d6" data-scroll>
                             <figure>
-                                <img alt="" src="/assets/resources/img/wragby/mockup.png">
+                                <img class="wrag__line__img" alt="" src="/assets/resources/img/wragby/lines.png">
                             </figure>
                         </div>
                     </div>
