--- a/wragby.html
+++ b/wragby.html
@@ -366,16 +366,57 @@
                         </div>
                     </div>
                 </div>
-                <div style="background: url(/assets/resources/img/wragby/bg.png) no-repeat; background-size: cover;"
-                    class="wrag__bg">
-                    <div id="poster" class="blocco">
-                        <div class="left_block margin__bottom grid_intern p-d6" data-scroll>
-                            <figure>
-                                <img class="wrag__line__img" alt="" src="/assets/resources/img/wragby/lines.png">
-                            </figure>
+
+
+
+                <div style="background:#1E1E1E" class="cont__bg__section">
+                    <div data-scroll>
+                        <div class="text_anim">
+                            <h2 class="grid__text">
+                                <span>GRID SYSTEM</span>
+                            </h2>
                         </div>
                     </div>
+                    <div class="wrag__bg">
+                        <div class="content__section">
+                            <div data-scroll>
+                                <div class="text_anim">
+                                    <h2 data-scroll-target="#portf" class="grid__col__text">
+                                        <span>12 column</span>
+                                    </h2>
+                                    <h2 data-scroll-target="#portf" class="p1" style="color: #E30B25 !important;">
+                                        <span>1920x1080px</span>
+                                    </h2>
+                                    <h2 data-scroll-target="#portf" class="p2" style="color: #2C5ED1 !important;">
+                                        <span>180 margin - 20 gutter</span>
+                                    </h2>
+                                </div>
+                                <div class="text_anim spline_p pt__top">
+                                    <p>
+                                        <span>
+                                            Provisioning and deprovisioning users within Google Workspace can be
+                                            time-consuming
+                                            and
+                                            costly. Let Patronum fully automate all the administrator and user tasks to
+                                            ensure
+                                            an
+                                            effective and secure process.
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="poster" class="blocco image__section">
+                            <div class="left_block margin__bottom grid_intern p-d6" data-scroll>
+                                <figure>
+                                    <img class="wrag__line__img" alt="" src="/assets/resources/img/wragby/black.png">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
+
 
                 <div class="image-section" data-scroll data-humcolor="#000" style="background-color: #E30B25;">
                     <div class="reveal img-right">
