--- a/wragby.html
+++ b/wragby.html
@@ -392,7 +392,7 @@
                                     </h2>
                                 </div>
                                 <div class="text_anim spline_p pt__top">
-                                    <p>
+                                    <p style="color: #fff;">
                                         <span>
                                             Provisioning and deprovisioning users within Google Workspace can be
                                             time-consuming
