--- a/wragby.html
+++ b/wragby.html
@@ -338,7 +338,7 @@
                 </div>
 
                 <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
+                    <div class="left_block grid_intern wrag__typo" data-scroll>
                         <figure>
                             <img alt="" class="wragby__typo-2" src="/assets/resources/img/wragby/typo1.png">
                         </figure>
