--- a/wragby.html
+++ b/wragby.html
@@ -330,7 +330,7 @@
                     </div>
                 </div>
                 <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
+                    <div class="left_block grid_intern wrag__typo" data-scroll>
                         <figure>
                             <img alt="" class="wragby__typo" src="/assets/resources/img/wragby/typo.png">
                         </figure>
