--- a/wragby.html
+++ b/wragby.html
@@ -429,7 +429,7 @@
                         <img class="wrag__image" src="/assets/resources/img/wragby/img3.png">
                     </div>
                     <div class="reveal img-left">
-                        <img src="/assets/resources/img/wragby/img4.png">
+                        <img src="/assets/resources/img/wragby/img4.png" class="last__img">
                     </div>
                 </div>
                 <!-- <div id="portf" class="grid_intern" data-scroll data-bgcolor="#fff" data-humcolor="#000">
