--- a/wragby.html
+++ b/wragby.html
@@ -263,7 +263,7 @@
                 <div class="wrag__cont">
 
                     <div id="portf" class="grid_intern port__f">
-                        <div class="margin-r-46" data-scroll>
+                        <div class="margin-r-46 margin-r-30" data-scroll>
                             <div class="text_anim">
                                 <h2 data-scroll-target="#portf">
                                     <span>Colour </span>
@@ -310,7 +310,7 @@
 
 
                 <div id="portf" class="grid_intern wrag__pt">
-                    <div class="margin-r-46" data-scroll>
+                    <div class="margin-r-46 margin-r-30" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Fonts </span>
@@ -418,7 +418,8 @@
                 </div>
 
 
-                <div class="image-section" data-scroll data-humcolor="#000" style="background-color: #E30B25;">
+                <div class="image-section wrag__image__section" data-scroll data-humcolor="#000"
+                    style="background-color: #E30B25;">
                     <div class="reveal img-right">
                         <img class="wrag__image" src="/assets/resources/img/wragby/img1.png">
                     </div>
