--- a/dmtc.html
+++ b/dmtc.html
@@ -166,7 +166,7 @@
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper active" data-bgcolor="#fff">
-                <div id="start" class="dharan dmtc" data-humcolor="#fff" style="background: #00855A;">
+                <div id="start" class="dharan dmtc" data-humcolor="#fff" style="background: #21D39A;">
                     <div class="el1 el-bg"></div>
                     <div class="el2 el-bg"></div>
                     <div class="el3 el-bg"></div>
@@ -240,13 +240,13 @@
                 <div id="poster" class="blocco mockup__pt">
                     <div class="left_block margin__bottom grid_intern" data-scroll>
                         <figure class="wrag__mockup">
-                            <img alt="" src="/assets/resources/img/dmtca/top.png">
+                            <img alt="" class="dmtc__end__img" src="/assets/resources/img/dmtca/top.png">
                         </figure>
                     </div>
                 </div>
 
-                <div class="module wrag__module padding_on_top_velocities m-p wragby__mp" style="background: #00855A;"
-                    data-humcolor="#fff">
+                <div class="module wrag__module dmtc__module dmtc__mp padding_on_top_velocities m-p wragby__mp"
+                    style="background: #00855A;" data-humcolor="#fff">
                     <div class="container-fluid">
                         <div class="row no-gutters justify-content-center">
                             <div class="col-1 margin_on_top_iota" data-scroll data-scroll-direction="vertical"
@@ -283,7 +283,7 @@
                 <div class="wrag__cont">
 
                     <div id="portf" class="grid_intern port__f">
-                        <div class="margin-r-46 margin-r-30" data-scroll>
+                        <div class="margin-r-46 margin-r-30 margin-r-10" data-scroll>
                             <div class="text_anim">
                                 <h2 data-scroll-target="#portf">
                                     <span>Colour </span>
@@ -308,7 +308,7 @@
 
                     <div id="colorc" class="wrag__color dmtca__color">
                         <div class="color-div flex dmtc__color__section">
-                            <div class="color__section wrag__color__section">
+                            <div class="color__section dmtc__color__sec wrag__color__section">
                                 <div data-scroll-target="#colorc" data-scroll data-scroll-speed="1">
                                     <img class="gcm__color" src="/assets/resources/img/dmtca/color.png" alt="">
                                 </div>
@@ -330,7 +330,7 @@
 
 
                 <div id="portf" class="grid_intern wrag__pt">
-                    <div class="margin-r-46 margin-r-30" data-scroll>
+                    <div class="margin-r-46 margin-r-30 margin-r-10" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Fonts </span>
@@ -359,7 +359,7 @@
 
 
                 <div id="portf" class="grid_intern wrag__pt">
-                    <div class="margin-r-46 margin-r-30" data-scroll>
+                    <div class="margin-r-46 margin-r-30 margin-r-10" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Website Screens</span>
@@ -417,7 +417,7 @@
 
 
                 <div id="portf" class="grid_intern" data-scroll data-bgcolor="#fff" data-humcolor="#000">
-                    <div class="margin-r-46" data-scroll>
+                    <div class="margin-r-46 margin-r-30 margin-r-10" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
                                 <span>Works</span>
@@ -438,7 +438,7 @@
                 </div>
                 <div id="poster" class="blocco">
                     <div class="left_block grid_intern dmtc__end__sec" data-scroll>
-                        <figure>
+                        <figure class="dmtc__mockup">
                             <img alt="" class="dmtc__end__img" src="/assets/resources/img/dmtca/end.png">
                         </figure>
                     </div>
