--- a/dmtc.html
+++ b/dmtc.html
@@ -310,7 +310,8 @@
                         <div class="color-div flex dmtc__color__section">
                             <div class="color__section dmtc__color__sec wrag__color__section">
                                 <div data-scroll-target="#colorc" data-scroll data-scroll-speed="1">
-                                    <img class="gcm__color" src="/assets/resources/img/dmtca/color.png" alt="">
+                                    <img class="gcm__color dmtc__color" src="/assets/resources/img/dmtca/color.png"
+                                        alt="">
                                 </div>
 
                             </div>
