--- a/dmtc.html
+++ b/dmtc.html
@@ -50,11 +50,11 @@
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
 
-    <!-- <div data-duration="5" class="en-page-loader" data-layout="dark">
+    <div data-duration="5" class="en-page-loader" data-layout="dark">
         <span class="apl-background"></span>
 
         <div class="apl-count"></div>
-    </div> -->
+    </div>
 
 
     <div class="site-header">
@@ -239,7 +239,7 @@
 
                 <div id="poster" class="blocco mockup__pt">
                     <div class="left_block margin__bottom grid_intern" data-scroll>
-                        <figure class="wrag__mockup">
+                        <figure class="wrag__mockup dmtc__mck">
                             <img alt="" class="dmtc__end__img" src="/assets/resources/img/dmtca/top.png">
                         </figure>
                     </div>
